<resources>
	<!-- App main values -->
    <string name="app_name">Traveler\'s diary</string>
    <string name="app_id">624978847578365</string>
    
    <!-- MapActivity -->
    <string name="no_title">No title</string>
    <string name="map_my_location">Getting your location</string>
    <string name="map_add_location_msg">Select a location to add</string>
    
    <!-- Main Activity -->
    <string name="main_ac_newRoute">New route</string>
    <string name="main_ac_existingRoute">Existing route</string>
    <string name="main_ac_gallery">Gallery</string>
    <string name="main_ac_settings">Settings</string>
    
    <!-- Menu items -->
    <string name="menu_settings">Settings</string>
    <string name="menu_startTracking">Start Tracking</string>
    <string name="menu_stopTracking">Stop Tracking</string>
    <string name="menu_drawLocations">Draw Locations</string>
    <string name="menu_changeRouteTitle">Change route title</string>
    <string name="menu_deleteRoute">Delete route</string>
    <string name="menu_addRoute">New route</string>
   	<string name="menu_showRouteOnMap">Show route on map</string>
   	<string name="menu_edit">Edit</string>
   	<string name="menu_delete">Delete</string>
   	<string name="menu_shareImg">Share</string>
   	<string name="menu_deleteImg">Delete</string>
   	<string name="menu_addPointToRoute">Add point</string>
   	<string name="menu_addImagesOfRoute">Add images of route</string>
   	<string name="menu_takePicture">Take picture</string>
   	<string name="menu_addImagesOfRouteItem">Add images</string>
   	<string name="menu_changeRouteItemTitle">Change title</string>
   	<string name="menu_deleteRouteItem">Delete point</string>
   	<string name="menu_showGallery">Gallery</string>
    
    <!-- Notification -->
    <string name="notif_tracking_ticker">Tracking started</string>
 	<string name="notif_tracking_title">Tracking is in progress</string>
 	<string name="notif_tracking_text">Select to open Location Tracker app</string>
 	<string name="notif_prov_ticker">Tracking unavailable</string>
 	<string name="notif_prov_title">Location providers are unavailable</string>
 	<string name="notif_prov_title_gps">GPS provider is unavailable</string>
 	<string name="notif_prov_text">Select to change location settings</string>
 	<string name="notif_prov_serviceStopped">Please restart location tracking. Something went wrong.</string>
 	
 	<!-- Dialog --> 	
    <string name="dialog_details">Details</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_set">Set</string>
    <string name="dialog_addInfo">Add Info</string>
    <string name="dialog_confirmation">Confirmation</string>
    <string name="dialog_routeItemDelete">Are you sure you want to delete this point?</string>
    <string name="dialog_routeDelete">Are you sure you want to delete this route?</string>
    
    <!-- Edit route item activity -->
    <string name="ri_edit_save">Save</string>
    <string name="ri_edit_saved">Successfully saved.</string>
 	<string name="ri_edit_autoFillAddress">Autofill address</string>
 	<string name="ri_edit_address">Address</string> 
 	
    <string name="ri_edit_title_hint">Enter title here</string>
 	<string name="ri_edit_desc_hint">Enter description here</string>
    <string name="ri_edit_coutry_hint">Enter country here</string>
    <string name="ri_edit_admin_area_hint">Enter administrative area here</string>
    <string name="ri_edit_feature_hint">Enter feature here</string>
    <string name="ri_edit_postal_hint">Enter postal code here</string>
 	<string name="ri_edit_address_line_hint">Enter city here</string>
 	<string name="ri_edit_thoroughfare_hint">Enter street here</string>
 	<string name="ri_edit_subthoroughfare_hint">Enter house number here</string> 	
 	
 	<string name="ri_edit_title">Title</string>
 	<string name="ri_edit_description">Description</string> 		
    <string name="ri_edit_country">Country:</string>
    <string name="ri_edit_admin_area">Administrative area:</string>
    <string name="ri_edit_feature">Feature:</string>
    <string name="ri_edit_postal_code">Postal code:</string>
    <string name="ri_edit_address_line">City:</string>
    <string name="ri_edit_thoroughfare">Street:</string>
    <string name="ri_edit_subthoroughfare">Sub street:</string>
 	 	
 	<!-- Routes activity -->
 	<string name="routes_title">Route title</string>
 	<string name="routes_title_hint">Enter route title here</string>
 	<string name="routes_add_button">Add new route</string>
 	
 	<!-- MultiPhotoSelect activity -->
 	<string name="multi_photo_select_add_selected_photos">Add selected photos</string>
 	<string name="multi_photo_select_success">Images added successfully!</string>
 	
 	<!-- Route detail fragment -->
 	<string name="route_detail_title">Route title</string>
 	<string name="route_detail_description">Description</string>
 	<string name="route_detail_created">Created on</string>
 	<string name="route_detail_bntSave">Save</string>
 	<string name="route_detail_title_hint">Enter title here</string>
 	<string name="route_detail_description_hint">Enter description here</string>
 	
 	<!-- Login activity -->
 	<string name="login_btn_log_in">Log in</string>
 	<string name="login_btn_log_out">Log out</string>
 	
 	<!-- Messages -->
 	<string name="warn_locProvider">No location providers available.</string>
 	<string name="warn_dataConnectionUnavailable">Data connection unavailable.</string>
 	<string name="warn_unableToFillLocation">Unable to fill address.</string>
 	<string name="warn_noImagesToDisplay">No images to display.</string>
 	<string name="warn_imageNotAdded">Image can not be added.</string>
 	<string name="warn_pleaseLogIn">User authentication required</string>
 	
 	<!-- Route item detail fragment -->
 	<string name="route_item_detail_latitude">Latitude:</string>
    <string name="route_item_detail_longitude">Longitude:</string>
    <string name="route_item_detail_route_title">Route name</string>
    <string name="route_item_detail_address">Address</string>
    <string name="route_item_detail_coordinates">Coordinates</string>
    <string name="route_item_detail_title">Title</string>
    <string name="route_item_detail_description">Description</string>
    <string name="route_item_detail_date">Date</string>
    <string name="route_item_detail_country">Country:</string>
    <string name="route_item_detail_admin_area">Administrative area:</string>
    <string name="route_item_detail_feature">Feature:</string>
    <string name="route_item_detail_postal_code">Postal code:</string>
    <string name="route_item_detail_address_line">City:</string>
    <string name="route_item_detail_thoroughfare">Street:</string>
    <string name="route_item_detail_subthoroughfare">Sub street:</string>
    
 	<!-- Other -->
    <string name="unknown">Unknown</string>
    <string name="unnamed">Unnamed</string>
    <string name="no_image">No image</string>    
    
    <string name="routes">Routes</string>
    <string name="route">Route</string>
    <string name="date">Date</string>
    <string name="edit">Edit</string>
    
   	<string name="hint_title">Enter route title here</string>   	
   	<string name="hint_routeItemtitle">Enter point title here</string>   	
   	<string name="hint_description">Enter route description here</string>   	
 	 	
 	<string name="country">Country</string>
 	<string name="city">City</string>
 	<string name="street">Street</string>
 	<string name="postal_code">Postal code</string>
 	<string name="feature">Feature</string>
 	<string name="house_number">House number</string>
 	
 	<string name="error_indexOutOfBounds">Error occurred.</string>
 	<string name="error_indexOutOfBounds_Log">Index out of bound.</string>
</resources>