<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true" >        

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ri_edit_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/ri_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ri_edit_title_hint"
            android:inputType="textNoSuggestions|textCapSentences" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ri_edit_description"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/ri_edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ri_edit_desc_hint"
            android:inputType="textNoSuggestions|textCapSentences" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/ri_edit_address"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ri_edit_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ri_edit_coutry_hint"
            android:ems="10"
            android:inputType="textNoSuggestions|textCapSentences" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ri_edit_admin_area"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ri_edit_adminArea_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ri_edit_admin_area_hint"
            android:ems="10" >
        </EditText>        

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ri_edit_addressLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ri_edit_address_line_hint"
            android:ems="10"
            android:inputType="textNoSuggestions|textCapSentences" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ri_edit_thoroughfare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ri_edit_thoroughfare_hint"
            android:inputType="textNoSuggestions|textCapSentences" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ri_edit_subthoroughfare"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ri_edit_subthoroughfare_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ri_edit_subthoroughfare_hint"
            android:ems="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postal_code"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ri_edit_postal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ri_edit_postal_hint"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ri_edit_feature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ri_edit_feature_hint"
            android:ems="10"
            android:inputType="textNoSuggestions|textCapSentences" />        

        <Button
            android:id="@+id/ri_edit_autofill_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ri_edit_autoFillAddress" />
        
        <Button
            android:id="@+id/ri_edit_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ri_edit_save" />
    </LinearLayout>

</ScrollView>