<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_changeRouteItemTtitle"
        android:title="@string/menu_changeRouteItemTitle"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_showRouteItemDetails"
        android:title="@string/dialog_details"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_takePicture"
        android:title="@string/menu_takePicture"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_addImage"
        android:title="@string/menu_addImagesOfRouteItem"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_showGallery"
        android:title="@string/menu_showGallery"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_deleteRouteItem"
        android:title="@string/menu_deleteRouteItem"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
