<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_startTracking"
        android:title="@string/menu_startTracking"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_stopTraking"
        android:title="@string/menu_stopTracking"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_drawLocations"
        android:title="@string/menu_drawLocations"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_routes"
        android:title="@string/routes"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
