<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_item_detail_route_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/routeItem_det_route_title_tV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_item_detail_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/routeItem_det_title_tV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_item_detail_description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/routeItem_det_description_tV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_item_detail_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/routeItem_det_date_tV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_item_detail_address"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/routeItem_det_country_tV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_item_detail_country"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/routeItem_det_adminArea_tV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_item_detail_admin_area"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/routeItem_det_city_tV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_item_detail_address_line"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/routeItem_det_thoroughfare_tV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_item_detail_thoroughfare"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/routeItem_det_subthoroughfare_tV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_item_detail_subthoroughfare"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/routeItem_det_postalCode_tV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_item_detail_postal_code"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/routeItem_det_feature_tV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_item_detail_feature"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_item_detail_coordinates"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/routeItem_det_coordinatesLat_tV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_item_detail_latitude"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/routeItem_det_coordinatesLon_tV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_item_detail_longitude"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</ScrollView>